--- a/_posts/2021-10-20-cad2020.md
+++ b/_posts/2021-10-20-cad2020.md
@@ -21,6 +21,16 @@ mathjax: true
 
 <strong> 使用"Ctrl + F"来快速定位您找到的产品：</strong>
 
+
+			Autodesk2020序列号：
+			066-66666666
+			400-45454545
+			653-12354321
+			666-98989898
+			666-69696969
+			667-98989898
+			
+			
 |<strong>产品名称</strong>|<strong>产品 Key</strong>|
 |---|---|
 |Autodesk 3ds Max 2020|	128L1|
