--- a/_posts/2021-12-20-cad.md
+++ b/_posts/2021-12-20-cad.md
@@ -12,7 +12,7 @@ mathjax: true
 
 # 准备文件
 
-* X-FORCE注册机
+* 激活文件
 * 对应版本序列号
 * 对应秘钥
 * CAD安装包
@@ -22,39 +22,8 @@ mathjax: true
 X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、AutoCAD Mechanical  2020等程序。你想要免费使用Autodesk2020、2019等版本的软件，使用X-Force就能快速激活。X-Force需要配合Autodesk序列号和密钥才能成功激活Autodesk2020系列产品。下面来看看X-Force使用步骤。</p>
 ![avatar](/image/xforce.jpg)
 
-### X-FORCE注册机使用文本教程
 
-PS：在弹出激活窗口时，需要右键&ldquo;以管理员身份运行&rdquo;打开注册机文件哦！先点一下左下角的&ldquo;Patch&rdquo;，记得啦。
-
-* 1、断网，安装 Autodesk 2020 产品 
-
-* 2、使用序列号 
-
-* 3、使用产品序列号和密钥（序列号和密钥见下载页面链接获取）
- 
-* 4、完成安装并重启 Autodesk 产品激活 
-
-* 5、点击激活之前 
-
-你有 2 个选择 ： 
-
-* a.禁用网卡，拉网线出或防火墙阻止（这只是禁用在线检测）它会告诉你，互联网连接是必需的&hellip; 只需点击关闭，再次点击激活 或者 
-
-* b.点击激活，它会做一个网上办理登机手续，只需点击关闭并再次单击激活。 
-
-选择选项 a 或 b。 
-
-* 6、选择我有一个 Autodesk 激活码 
-
-* 7、一旦出现激活屏幕，就要运行注册机X-Force 
-
-* 8、点击注册机上的Patch按钮（你应该看到成功补丁）
- 
-* 9、复制请求代码到注册机并按Generate生成 
-
-* 10、现在回到复制激活码到激活屏幕，然后单击下一步，你有一个完全注册的 Autodesk 产品 
-
-### X-FORCE注册机使用图文教程
+## Autodesk2008-2020激活图文教程
 
 以AutoCAD 2020为例 
 
@@ -114,3 +83,18 @@ PS：在弹出激活窗口时，需要右键&ldquo;以管理员身份运行&rdqu
 * 15、激活成功 
 
 ![avatar](/image/cad13.jpg)
+
+## Autodesk2021激活图文教程
+
+* 1、安装 Autodesk 2021 软件.
+* 2、安装 Network License Manager (NLM), 更改"this_host" - on the first string of the file
+			\patch\license.dat - to your PC name.
+			Setup & start license server with the edited
+			above license.dat as a license file.
+			Copy \patch\adlmint.dll to the folder:
+			{Program Files (x86)}\Common Files\Autodesk Shared\AdskLicensing\Current\AdskLicensingAgent\
+			overwriting original one.
+			Run Autodesk software and choose:
+			- License type: Use a network license
+			- License server model: Single License Server
+			- Name of the server: 27080@your_host_name
