--- a/_posts/2021-10-12-cad2012.md
+++ b/_posts/2021-10-12-cad2012.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2012产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2012
 mathjax: true
 ---
 
@@ -151,7 +151,7 @@ mathjax: true
 |mental ray Standalone 2012|	718D1|
 |RealDWG 2012|	151D1|
 |T1 Enterprise Multi-flex 2012|	535D1|
-|Autodesk  |AutoCAD 2012|	001D1| 
+|Autodesk  AutoCAD 2012|	001D1| 
 |AutoCAD LT 2012|	057D1| 
 |Autodesk  3ds max 2012|	128D1| 
 |AutoCAD Map 3D 2012|	129D1| 
@@ -206,7 +206,7 @@ mathjax: true
 |Autodesk  Algor Simulation Pro 2012|	667D1| 
 |ALIAS AUTOMOTIVE 2012|	710D1| 
 |ALIAS DESIGN 2012|	712D1| 
-|Direct Connect for Catia 5	714D1| 
+|Direct Connect for Catia 5|	714D1| 
 |Direct Connect for NX 2012|	719D1| 
 |Sketchbook Pro 2012|	732D1| 
 |ALIAS SURFACE 2012|	736D1| 
