--- a/_posts/2021-10-14-cad2014.md
+++ b/_posts/2021-10-14-cad2014.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2014产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2014
 mathjax: true
 ---
 
@@ -64,7 +64,7 @@ mathjax: true
 |Autodesk  Alias Automotive 2014|	710F1|
 |Autodesk  Alias Design 2014|	712F1|
 |Autodesk  Alias Surface 2014|	736F1|
-|Autodesk  Alias TC Integrator for GM	770F1|
+|Autodesk  Alias TC Integrator for GM|	770F1|
 |Autodesk  Animation Academy 2014|	548F1|
 |Autodesk  AutoCAD Utility Design 2014|	213F1|
 |Autodesk  BIM 360 2014|	854F1|
@@ -72,7 +72,7 @@ mathjax: true
 |Autodesk  Building Design Suite Standard 2014|	784F1|
 |Autodesk  Building Design Suite Ultimate 2014|	766F1|
 |Autodesk  Design Academy 2014|	200F1|
-|Autodesk  Display Cluster Module for |Autodesk  VRED Design 2014|	889F1|
+|Autodesk  Display Cluster Module for Autodesk  VRED Design 2014|	889F1|
 |Autodesk  Education Master Suite 2014|	651F1|
 |Autodesk  Entertainment Creation Suite For Education 2014|	656F1|
 |Autodesk  Entertainment Creation Suite Premium 2014| Exclusives	P02F1|
@@ -119,7 +119,7 @@ mathjax: true
 |Autodesk  Product Design Suite Standard 2014|	783F1|
 |Autodesk  Product Design Suite Ultimate 2014|	781F1|
 |Autodesk  Quantity Takeoff 2014|	424F1|
-|Autodesk  Raytracing Cluster Module for |Autodesk  VRED 2014|	890F1|
+|Autodesk  Raytracing Cluster Module for Autodesk  VRED 2014|	890F1|
 |Autodesk  Real-Time Ray Tracing Cluster 2014|	692F1|
 |Autodesk  Revit 2014|	829F1|
 |Autodesk  Revit Architecture 2014|	240F1|
@@ -133,13 +133,13 @@ mathjax: true
 |Autodesk  Simulation 360 2014|	848F1|
 |Autodesk  Simulation 360 Ultimate 2014|	857F1|
 |Autodesk  Simulation CFD 2014|	809F1|
-|Autodesk  Simulation CFD 2014| Advanced	810F1|
-|Autodesk  Simulation CFD 2014| Connection for ACIS	819F1|
-|Autodesk  Simulation CFD 2014| Connection for NX	815F1|
-|Autodesk  Simulation CFD 2014| Connection for Parasolid	824F1|
-|Autodesk  Simulation CFD 2014| Connection for Pro/E	822F1|
-|Autodesk  Simulation CFD 2014| Design Study Environment	812F1|
-|Autodesk  Simulation CFD 2014| Motion	811F1|
+|Autodesk  Simulation CFD 2014 Advanced|	810F1|
+|Autodesk  Simulation CFD 2014 Connection for ACIS|	819F1|
+|Autodesk  Simulation CFD 2014 Connection for NX|	815F1|
+|Autodesk  Simulation CFD 2014 Connection for Parasolid|	824F1|
+|Autodesk  Simulation CFD 2014 Connection for Pro/E|	822F1|
+|Autodesk  Simulation CFD 2014 Design Study Environment|	812F1|
+|Autodesk  Simulation CFD 2014 Motion|	811F1|
 |Autodesk  Simulation DFM 2014|	837F1|
 |Autodesk  Simulation Mechanical 2014|	669F1|
 |Autodesk  Simulation Moldflow Adviser Premium 2014|	571F1|
@@ -167,7 +167,7 @@ mathjax: true
 |Autodesk  VRED Presenter 2014|	888F1|
 |Autodesk  VRED Professional 2014|	886F1|
 |Autodesk  VRED Server 2014|	887F1|
-|CADdoctor for |Autodesk  Simulation 2014|	577F1|
+|CADdoctor for Autodesk  Simulation 2014|	577F1|
 |Instructables Direct 2014|	A47F1|
 |Instructables Membership 2014|	A48F1|
 |Instructables Other 2014|	A49F1|
@@ -175,4 +175,4 @@ mathjax: true
 |mental ray Standalone 2014|	718F1|
 |RealDWG 2014|	151F1|
 |T1 Enterprise Multi-flex 2014|	535F1|
-|T1 Enterprise Multi-flex Standard Bundle 2014||	891F1|
+|T1 Enterprise Multi-flex Standard Bundle 2014|	891F1|
