--- a/_posts/2021-10-11-cad2011.md
+++ b/_posts/2021-10-11-cad2011.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2011产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2011
 mathjax: true
 ---
 
