--- a/_posts/2021-10-13-cad2013.md
+++ b/_posts/2021-10-13-cad2013.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2013产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2013
 mathjax: true
 ---
 
@@ -55,7 +55,7 @@ mathjax: true
 |Autodesk  Alias Automotive 2013|	710E1|
 |Autodesk  Alias Design 2013|	712E1|
 |Autodesk  Alias Surface 2013|	736E1|
-|Autodesk  Alias TC Integrator for GM	770E1|
+|Autodesk  Alias TC Integrator for GM|	770E1|
 |Autodesk  BIM 360 2013|	854E1|
 |Autodesk  Building Design Suite Premium 2013|	765E1|
 |Autodesk  Building Design Suite Standard 2013|	784E1|
@@ -153,119 +153,119 @@ mathjax: true
 |mental ray Standalone 2013|	718E1|
 |RealDWG 2013|	151E1|
 |T1 Enterprise Multi-flex 2013|	535E1|
-|Autodesk  Design Suite (key for |AutoCAD, Civil3d, Mep, Inventor, 3ds Max, Architecture)	Product Key: 200E1|
-|AutoCAD 2013|	Product Key: 001E1|
-|AutoCAD 2013| for Mac OS	Product Key: 777E1|
-|AutoCAD LT 2013|	Product Key: 057E1|
-|AutoCAD Architecture 2013|	Product Key: 185E1|
-|AutoCAD Civil 2013|	Product Key: 544D1
-|AutoCAD Civil 3D 2013|	Product Key: 237E1|
-|AutoCAD Design Suite Premium 2013|	Product Key: 768E1|
-|AutoCAD Design Suite Standard 2013|	Product Key: 767E1|
-|AutoCAD Design Suite Ultimate 2013|	Product Key: 769E1|
-|AutoCAD Electrical 2013|	Product Key: 225E1|
-|AutoCAD ECSCAD 2013|	Product Key: 562E1|
-|AutoCAD Freestyle 2013|	Product Key: 772E1|
-|AutoCAD Inventor LT 2013|	Product Key: 596E1|
-|AutoCAD Map 3D 2013|	Product Key: 129E1|
-|AutoCAD Map 3D Enterprise 2013|	Product Key: 799E1|
-|AutoCAD Mechanical 2013|	Product Key: 206E1|
-|AutoCAD MEP 2013|	Product Key: 235E1|
-|AutoCAD P&ID 2013|	Product Key: 448E1|
-|AutoCAD Plant 3D 2013|	Product Key: 426E1|
-|Autodesk  Quantity Takeoff 2013|	Product Key: 424E1|
-|AutoCAD Raster Design 2013|	Product Key: 340E1|
-|AutoCAD Revit Architecture Visualization Suite 2013|	Product Key: 595E1|
-|AutoCAD Structural Detailing 2013|	Product Key: 587E1|
-|AutoCAD Utility Design 2013|	Product Key: 213E1|
-|AutoCAD Visual (VSL) Suite XGD 2013|	Product Key: 592E1|
-|Autodesk  3ds Max 2013|	Product Key: 128E1|
-|Autodesk  3ds Max Design 2013|	Product Key: 495E1|
-|Autodesk  3ds Max Entertainment Creation Suite Premium 2013|	Product Key: 774E1|
-|Autodesk  3ds Max Entertainment Creation Suite Standard 2013|	Product Key: 661E1|
-|Autodesk  Alias Automotive 2013|	Product Key: 710E1|
-|Autodesk  Alias Design 2013|	Product Key: 712E1|
-|Autodesk  Alias Surface 2013|	Product Key: 736E1|
-|Autodesk  Building Design Suite Premium 2013|	Product Key: 765E1|
-|Autodesk  Building Design Suite Standard 2013|	Product Key: 784E1|
-|Autodesk  Building Design Suite Ultimate 2013|	Product Key: 766E1|
-|Autodesk  Direct Connect for Catia 4	Product Key: 532E1|
-|Autodesk  Direct Connect for Catia 5	Product Key: 714E1|
-|Autodesk  Direct Connect for JT 2013|	Product Key: 279E1|
-|Autodesk  Direct Connect for UG NX 2013|	Product Key: 719E1|
-|Autodesk  Ecotect Analysis 2013|	Product Key: 593E1|
-|Autodesk  Entertainment Creation Suite Ultimate 2013|	Product Key: 793E1|
-|Autodesk  Factory Design Suite Premium 2013|	Product Key: 757E1|
-|Autodesk  Factory Design Suite Standard 2013|	Product Key: 789E1|
-|Autodesk  Factory Design Suite Ultimate 2013|	Product Key: 760E1|
-|Autodesk  Infrastructure Design Suite Premium 2013|	Product Key: 786E1|
-|Autodesk  Infrastructure Design Suite Standard 2013|	Product Key: 787E1|
-|Autodesk  Infrastructure Design Suite Ultimate 2013|	Product Key: 785E1|
-|Autodesk  Infrastructure Map Server	Product Key: 796E1|
-|Autodesk  Infrastructure Modeler 2013|	Product Key: 808E1|
-|Autodesk  Intent Professional 2013|	Product Key: 584E1|
-|Autodesk  Inventor Standard 2013|	Product Key: 208E1|
-|Autodesk  Inventor Engineer-to-Order Series 2013|	Product Key: 805E1|
-|Autodesk  Inventor (LT) 2013|	Product Key: 529E1|
-|Autodesk  Inventor Suite 2013|	Product Key: 527E1|
-|Autodesk  Inventor Professional 2013|	Product Key: 797E1|
-|Autodesk  Inventor Professional Suite 2013|	Product Key: 462E1|
-|Autodesk  Inventor Publisher 2013|	Product Key: 666E1|
-|Autodesk  Inventor R-SYS	Product Key: 464E1|
-|Autodesk  Inventor Simulation	Product Key: 466E1|
-|Autodesk  Inventor Tooling Suite	Product Key: 294E1|
-|Autodesk  LandXplorer Studio Professional 2013|	Product Key: A27E1|
-|Autodesk  MapGuide 2013|	Product Key: 276E1|
-|Autodesk  Maya 2013|	Product Key: 657E1|
-|Autodesk  Maya Entertainment Creation Suite Premium 2013|	Product Key: 775E1|
-|Autodesk  Maya Entertainment Creation Suite Standard 2013|	Product Key: 660E1|
-|Autodesk  Mental Ray Standalone 2013|	Product Key: 718E1|
-|Autodesk  Moldflow Adviser Design 2013|	Product Key: 570E1|
-|Autodesk  Moldflow Adviser Manufacturing 2013|	Product Key: 571E1|
-|Autodesk  Moldflow Adviser Advanced 2013|	Product Key: 572E1|
-|Autodesk  Moldflow CAD Doctor 2013|	Product Key: 577E1|
-|Autodesk  Moldflow Design Link Catia V5 2013|	Product Key: 566E1|
-|Autodesk  Moldflow Design Link Pro/ENGINEER 2013|	Product Key: 567E1|
-|Autodesk  Moldflow Design Link Parasolid 2013|	Product Key: 568E1|
-|Autodesk  Moldflow Insight Basic 2013|	Product Key: 573E1|
-|Autodesk  Moldflow Insight Performance 2013|	Product Key: 574E1|
-|Autodesk  Moldflow Insight Advanced 2013|	Product Key: 575E1|
-|Autodesk  Moldflow Synergy 2013|	Product Key: 579E1|
-|Autodesk  MotionBuilder 2013|	Product Key: 727E1|
-|Autodesk  Mudbox 2013|	Product Key: 498E1|
-|Autodesk  Navisworks Manage 2013|	Product Key: 507E1|
-|Autodesk  Navisworks Manufacturing Manage 2013|	Product Key: 597E1|
-|Autodesk  Navisworks Manufacturing Review	Product Key: 598E1|
-|Autodesk  Navisworks Manufacturing Simulator	Product Key: 599E1|
-|Autodesk  Navisworks Review	Product Key: 504E1|
-|Autodesk  Navisworks Simulate 2013|	Product Key: 506E1|
-|Autodesk  Plant Design Suite Standard 2013|	Product Key: 788E1|
-|Autodesk  Plant Design Suite Premium 2013|	Product Key: 763E1|
-|Autodesk  Plant Design Suite Ultimate 2013|	Product Key: 764E1|
-|Autodesk  Product Design Suite Premium 2013|	Product Key: 782E1|
-|Autodesk  Product Design Suite Standard 2013|	Product Key: 783E1|
-|Autodesk  Product Design Suite Ultimate 2013|	Product Key: 781E1|
-|Autodesk  Revit 2013|	Product Key: 829E1|
-|Autodesk  Revit Architecture 2013|	Product Key: 240E1|
-|Autodesk  Revit Architecture Suite 2013|	Product Key: 241E1|
-|Autodesk  Revit Structure 2013|	Product Key: 255E1|
-|Autodesk  Revit Structure Suite 2013|	Product Key: 256E1|
-|Autodesk  Revit MEP 2013|	Product Key: 297E1|
-|Autodesk  Revit MEP-B 2013|	Product Key: 589E1|
-|Autodesk  Revit MEP Suite 2013|	Product Key: 257E1|
-|Autodesk  Robot Structural Analysis 2013|	Product Key: 546E1|
-|Autodesk  Robot Structural Analysis Professional 2013|	Product Key: 547E1|
-|Autodesk  Showcase Standard 2013|	Product Key: 262E1|
-|Autodesk  Showcase Presenter	Product Key: 586E1|
-|Autodesk  Showcase Professional 2013|	Product Key: 295E1|
-|Autodesk  SketchBook Designer 2013|	Product Key: 741E1|
-|Autodesk  SketchBook Pro 2013|	Product Key: 732E1|
-|Autodesk  Simulation Mechanical 2013|	Product Key: 669E1|
-|Autodesk  Simulation Multiphysics 2013|	Product Key: 667E1|
-|Autodesk  Softimage 2013|	Product Key: 590E1|
-|Autodesk  Stitcher Unlimited 2013|	Product Key: 551E1|
-|Autodesk  Topobase Client 2013|	Product Key: 475E1|
-|Autodesk  Topobase Web 2013|	Product Key: 467E1|
-|Autodesk  Vault Collaboration 2013|	Product Key: 549E1|
-|Autodesk  Vault (Manufacturing) Professional 2013|	Product Key: 569E1|
-|Autodesk  Vault Workgroup 2013|	Product Key: 559E1|
+|Autodesk  Design Suite (key for AutoCAD, Civil3d, Mep, Inventor, 3ds Max, Architecture)| 200E1|
+|AutoCAD 2013|	001E1|
+|AutoCAD 2013 for Mac OS| 777E1|
+|AutoCAD LT 2013| 057E1|
+|AutoCAD Architecture 2013|	  185E1|
+|AutoCAD Civil 2013|	  544D1
+|AutoCAD Civil 3D 2013|	  237E1|
+|AutoCAD Design Suite Premium 2013|	  768E1|
+|AutoCAD Design Suite Standard 2013|	  767E1|
+|AutoCAD Design Suite Ultimate 2013|	  769E1|
+|AutoCAD Electrical 2013|	  225E1|
+|AutoCAD ECSCAD 2013|	  562E1|
+|AutoCAD Freestyle 2013|	  772E1|
+|AutoCAD Inventor LT 2013|	  596E1|
+|AutoCAD Map 3D 2013|	  129E1|
+|AutoCAD Map 3D Enterprise 2013|	  799E1|
+|AutoCAD Mechanical 2013|	  206E1|
+|AutoCAD MEP 2013|	  235E1|
+|AutoCAD P&ID 2013|	  448E1|
+|AutoCAD Plant 3D 2013|	  426E1|
+|Autodesk  Quantity Takeoff 2013|	  424E1|
+|AutoCAD Raster Design 2013|	  340E1|
+|AutoCAD Revit Architecture Visualization Suite 2013|	  595E1|
+|AutoCAD Structural Detailing 2013|	  587E1|
+|AutoCAD Utility Design 2013|	  213E1|
+|AutoCAD Visual (VSL) Suite XGD 2013|	  592E1|
+|Autodesk  3ds Max 2013|	  128E1|
+|Autodesk  3ds Max Design 2013|	  495E1|
+|Autodesk  3ds Max Entertainment Creation Suite Premium 2013|	  774E1|
+|Autodesk  3ds Max Entertainment Creation Suite Standard 2013|	  661E1|
+|Autodesk  Alias Automotive 2013|	  710E1|
+|Autodesk  Alias Design 2013|	  712E1|
+|Autodesk  Alias Surface 2013|	  736E1|
+|Autodesk  Building Design Suite Premium 2013|	  765E1|
+|Autodesk  Building Design Suite Standard 2013|	  784E1|
+|Autodesk  Building Design Suite Ultimate 2013|	  766E1|
+|Autodesk  Direct Connect for Catia 4	  |532E1|
+|Autodesk  Direct Connect for Catia 5	 | 714E1|
+|Autodesk  Direct Connect for JT 2013|	  279E1|
+|Autodesk  Direct Connect for UG NX 2013|	  719E1|
+|Autodesk  Ecotect Analysis 2013|	  593E1|
+|Autodesk  Entertainment Creation Suite Ultimate 2013|	  793E1|
+|Autodesk  Factory Design Suite Premium 2013|	  757E1|
+|Autodesk  Factory Design Suite Standard 2013|	  789E1|
+|Autodesk  Factory Design Suite Ultimate 2013|	  760E1|
+|Autodesk  Infrastructure Design Suite Premium 2013|	  786E1|
+|Autodesk  Infrastructure Design Suite Standard 2013|	  787E1|
+|Autodesk  Infrastructure Design Suite Ultimate 2013|	  785E1|
+|Autodesk  Infrastructure Map Server	  |796E1|
+|Autodesk  Infrastructure Modeler 2013|	  808E1|
+|Autodesk  Intent Professional 2013|	  584E1|
+|Autodesk  Inventor Standard 2013|	  208E1|
+|Autodesk  Inventor Engineer-to-Order Series 2013|	  805E1|
+|Autodesk  Inventor (LT) 2013|	  529E1|
+|Autodesk  Inventor Suite 2013|	  527E1|
+|Autodesk  Inventor Professional 2013|	  797E1|
+|Autodesk  Inventor Professional Suite 2013|	  462E1|
+|Autodesk  Inventor Publisher 2013|	  666E1|
+|Autodesk  Inventor R-SYS	 | 464E1|
+|Autodesk  Inventor Simulation	 | 466E1|
+|Autodesk  Inventor Tooling Suite	 | 294E1|
+|Autodesk  LandXplorer Studio Professional 2013|	  A27E1|
+|Autodesk  MapGuide 2013|	  276E1|
+|Autodesk  Maya 2013|	  657E1|
+|Autodesk  Maya Entertainment Creation Suite Premium 2013|	  775E1|
+|Autodesk  Maya Entertainment Creation Suite Standard 2013|	  660E1|
+|Autodesk  Mental Ray Standalone 2013|	  718E1|
+|Autodesk  Moldflow Adviser Design 2013|	  570E1|
+|Autodesk  Moldflow Adviser Manufacturing 2013|	  571E1|
+|Autodesk  Moldflow Adviser Advanced 2013|	  572E1|
+|Autodesk  Moldflow CAD Doctor 2013|	  577E1|
+|Autodesk  Moldflow Design Link Catia V5 2013|	  566E1|
+|Autodesk  Moldflow Design Link Pro/ENGINEER 2013|	  567E1|
+|Autodesk  Moldflow Design Link Parasolid 2013|	  568E1|
+|Autodesk  Moldflow Insight Basic 2013|	  573E1|
+|Autodesk  Moldflow Insight Performance 2013|	  574E1|
+|Autodesk  Moldflow Insight Advanced 2013|	  575E1|
+|Autodesk  Moldflow Synergy 2013|	  579E1|
+|Autodesk  MotionBuilder 2013|	  727E1|
+|Autodesk  Mudbox 2013|	  498E1|
+|Autodesk  Navisworks Manage 2013|	  507E1|
+|Autodesk  Navisworks Manufacturing Manage 2013|	  597E1|
+|Autodesk  Navisworks Manufacturing Review	|  598E1|
+|Autodesk  Navisworks Manufacturing Simulator	|  599E1|
+|Autodesk  Navisworks Review	 | 504E1|
+|Autodesk  Navisworks Simulate 2013|	  506E1|
+|Autodesk  Plant Design Suite Standard 2013|	  788E1|
+|Autodesk  Plant Design Suite Premium 2013|	  763E1|
+|Autodesk  Plant Design Suite Ultimate 2013|	  764E1|
+|Autodesk  Product Design Suite Premium 2013|	  782E1|
+|Autodesk  Product Design Suite Standard 2013|	  783E1|
+|Autodesk  Product Design Suite Ultimate 2013|	  781E1|
+|Autodesk  Revit 2013|	  829E1|
+|Autodesk  Revit Architecture 2013|	  240E1|
+|Autodesk  Revit Architecture Suite 2013|	  241E1|
+|Autodesk  Revit Structure 2013|	  255E1|
+|Autodesk  Revit Structure Suite 2013|	  256E1|
+|Autodesk  Revit MEP 2013|	  297E1|
+|Autodesk  Revit MEP-B 2013|	  589E1|
+|Autodesk  Revit MEP Suite 2013|	  257E1|
+|Autodesk  Robot Structural Analysis 2013|	  546E1|
+|Autodesk  Robot Structural Analysis Professional 2013|	  547E1|
+|Autodesk  Showcase Standard 2013|	  262E1|
+|Autodesk  Showcase Presenter	|  586E1|
+|Autodesk  Showcase Professional 2013|	  295E1|
+|Autodesk  SketchBook Designer 2013|	  741E1|
+|Autodesk  SketchBook Pro 2013|	  732E1|
+|Autodesk  Simulation Mechanical 2013|	  669E1|
+|Autodesk  Simulation Multiphysics 2013|	  667E1|
+|Autodesk  Softimage 2013|	  590E1|
+|Autodesk  Stitcher Unlimited 2013|	  551E1|
+|Autodesk  Topobase Client 2013|	  475E1|
+|Autodesk  Topobase Web 2013|	  467E1|
+|Autodesk  Vault Collaboration 2013|	  549E1|
+|Autodesk  Vault (Manufacturing) Professional 2013|	  569E1|
+|Autodesk  Vault Workgroup 2013|	  559E1|
