--- a/_posts/2021-10-15-cad2015.md
+++ b/_posts/2021-10-15-cad2015.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2015产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2015
 mathjax: true
 ---
 
