--- a/_posts/2021-10-17-cad2017.md
+++ b/_posts/2021-10-17-cad2017.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2017产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2017
 mathjax: true
 ---
 
