--- a/_posts/2021-10-21-cad2021.md
+++ b/_posts/2021-10-21-cad2021.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2021产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys
+tags: CAD秘钥 AutoCADkeys CAD2021
 mathjax: true
 ---
 
