--- a/_posts/2021-10-20-cad2020.md
+++ b/_posts/2021-10-20-cad2020.md
@@ -75,7 +75,7 @@ mathjax: true
 |Autodesk  FeatureCAM Standard 2020|	A9GL1|
 |Autodesk  FeatureCAM Ultimate 2020|	A9EL1|
 |Autodesk  Flame 2020|	C0TL1|
-|Autodesk  Flame 2020|： – Education	C14L1|
+|Autodesk  Flame 2020： – Education|	C14L1|
 |Autodesk  Flame Assist 2020|	C0YL1|	
 |Autodesk  Flame Premium 2020|	C0VL1|
 |Autodesk  Flame Premium 2020|	C0XL1|
@@ -89,9 +89,9 @@ mathjax: true
 |Autodesk  Infrastructure Design Suite Ultimate 2020|	785L1|
 |Autodesk  InfraWorks 2020|	927L1|
 |Autodesk  Inventor 2020|	208L1|
-|Autodesk  Inventor Engineer-to-Order 2020|： – Developer	A66L1|
-|Autodesk  Inventor Engineer-to-Order 2020|： – Distribution	996L1|
-|Autodesk  Inventor Engineer-to-Order 2020|： – Server	997L1|
+|Autodesk  Inventor Engineer-to-Order 2020： – Developer|	A66L1|
+|Autodesk  Inventor Engineer-to-Order 2020： – Distribution|	996L1|
+|Autodesk  Inventor Engineer-to-Order 2020： – Server|	997L1|
 |Autodesk  Inventor Engineer-to-Order Series 2020|	805L1|
 |Autodesk  Inventor Engineer-to-Order Server 2020|	752L1|
 |Autodesk  Inventor HSM Premium 2020|	969L1|
@@ -124,8 +124,6 @@ mathjax: true
 |Autodesk  Plant Design Suite Ultimate 2020|	764L1|
 |Autodesk  Point Layout 2020|	925L1|
 |Autodesk  PowerInspect Premium 2020|	A9JL1|
-|Autodesk  PowerInspect Standard 2017	A9KI1
-|Autodesk  PowerInspect Standard 2018	A9KJ1
 |Autodesk  PowerInspect Standard 2020|	A9KL1|
 |Autodesk  PowerInspect Ultimate 2020|	A9HL1|
 |Autodesk  PowerMill Modeling 2020|	A9UL1|
@@ -146,7 +144,7 @@ mathjax: true
 |Autodesk  TruComp 2020|	00EL1|
 |Autodesk  TruFiber 2020|	01WL1|
 |Autodesk  TruLaser 2020|	00DL1|
-|Autodesk  TruNest 2020|： – Nesting Engine	00FL1|
+|Autodesk  TruNest 2020：– Nesting Engine|	00FL1|
 |Autodesk  TruNest Composites 2020|	00BL1|
 |Autodesk  TruNest Contour 2020|	00AL1|
 |Autodesk  TruNest Multi-Tool 2020|	00CL1|
