--- a/_posts/2021-12-20-cad.md
+++ b/_posts/2021-12-20-cad.md
@@ -66,7 +66,7 @@ X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、Au
 
 ![avatar](/image/cad9.jpg)
 
-* 11、输入序列号、密匙，[序列号、密匙获取地址](/download/)，输入后，千万不要点下一步 ！千万不要点下一步 ！千万不要点下一步 ！暂停在这里进行第12步！
+* 11、输入序列号、密匙，[序列号、密匙获取地址](/download/#cad-激活文件下载)，输入后，千万不要点下一步 ！千万不要点下一步 ！千万不要点下一步 ！暂停在这里进行第12步！
 
 ![avatar](/image/cad10.jpg)
 
