--- a/_posts/2021-12-20-cad.md
+++ b/_posts/2021-12-20-cad.md
@@ -14,7 +14,7 @@ mathjax: true
 
 * 激活文件
 * 对应版本序列号
-* 对应秘钥
+* 对应密钥
 * CAD安装包
 
 # X-FORCE
@@ -87,7 +87,7 @@ X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、Au
 ## Autodesk2021激活教程
 
 * 1、安装 Autodesk 2021 软件.
-* 2、安装 Network License Manager (NLM), 更改"this_host" - on the first string of the file
+* 2、安装 [Network License Manager (NLM)](/NLM), 更改"this_host" - on the first string of the file
 			\patch\license.dat - to your PC name.
 * 3、设置和启动许可服务器
 			above license.dat as a license file.
