--- a/_posts/2021-10-14-cad2014.md
+++ b/_posts/2021-10-14-cad2014.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2014产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys CAD2014
+tags: CAD密钥 AutoCADkeys CAD2014
 mathjax: true
 ---
 
