--- a/_posts/2021-10-16-cad2016.md
+++ b/_posts/2021-10-16-cad2016.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2016产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys CAD2016
+tags: CAD密钥 AutoCADkeys CAD2016
 mathjax: true
 ---
 
