--- a/_posts/2021-10-19-cad2019.md
+++ b/_posts/2021-10-19-cad2019.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2019产品序列号及密钥"
 categories: CAD
-tags: CAD秘钥 AutoCADkeys CAD2019
+tags: CAD密钥 AutoCADkeys CAD2019
 mathjax: true
 ---
 
