--- a/_posts/2020-09-11-cad2011.md
+++ b/_posts/2020-09-11-cad2011.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2011产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2011
+tags: CADkeys CAD2011
 mathjax: true
 ---
 
