--- a/_posts/2020-09-12-cad2012.md
+++ b/_posts/2020-09-12-cad2012.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2012产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2012
+tags: CADkeys CAD2012
 mathjax: true
 ---
 
