--- a/_posts/2020-09-13-cad2013.md
+++ b/_posts/2020-09-13-cad2013.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2013产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2013
+tags: CADkeys CAD2013
 mathjax: true
 ---
 
