--- a/_posts/2020-09-15-cad2015.md
+++ b/_posts/2020-09-15-cad2015.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2015产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2015
+tags: CADkeys CAD2015
 mathjax: true
 ---
 
