--- a/_posts/2020-09-18-cad2018.md
+++ b/_posts/2020-09-18-cad2018.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2018产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2018
+tags: CADkeys CAD2018
 mathjax: true
 ---
 
