--- a/_posts/2020-09-21-cad2021.md
+++ b/_posts/2020-09-21-cad2021.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2021产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2021
+tags: CADkeys CAD2021
 mathjax: true
 ---
 
