--- a/_posts/2020-11-29-Corel.md
+++ b/_posts/2020-11-29-Corel.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "CorelDRAW激活教程"
 categories: CorelDRAW
-tags: CorelDRAW激活 CorelDRAW-Graphics-Suite CorelDRAW
+tags: CorelDRAW激活 Corel CorelDRAW
 mathjax: true
 ---
 
