--- a/_posts/2020-09-10-cad2010.md
+++ b/_posts/2020-09-10-cad2010.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Autodesk2010产品序列号及密钥"
 categories: CAD
-tags: CAD密钥 AutoCADkeys CAD2010
+tags: CADkeys CAD2010
 mathjax: true
 ---
 
