--- a/_posts/2020-11-29-Corel.md
+++ b/_posts/2020-11-29-Corel.md
@@ -33,7 +33,8 @@ mathjax: true
 ![avatar](/image/Corel-X-Force.png)
 8. 单击"继续"
 9. 都完成了！
-**注意**:某些防病毒/安全软件可能会对 Keygens 发出错误警告。而且，您最好禁用 Corel 产品的自动更新功能。
+**注意**:某些防病毒/安全软件可能会对 X-Force Keygens 发出错误警告。可以使用 [VirusTotal](https://www.virustotal.com/) 进行完整、权威的扫描。而且，您最好禁用 Corel 产品的自动更新功能。
+
 ## Corel激活方案教程
 以激活 CorelDRAW Graphics Suite X6 为例
 序列号Serial Number在激活文件中获取。
@@ -46,7 +47,7 @@ mathjax: true
 ![avatar](/image/Corel-CORE.png)
 7. 完成， 享受！
 
-**注意**:某些防病毒/安全软件可能会对 Keygens 发出错误警告。而且，您最好禁用 Corel 产品的自动更新功能。
+**注意**:某些防病毒/安全软件可能会对 X-Force Keygens 发出错误警告。可以使用 [VirusTotal](https://www.virustotal.com/) 进行完整、权威的扫描。而且，您最好禁用 Corel 产品的自动更新功能。
 
 
 ## X-Force激活方案支持产品列表
