--- a/_posts/2020-11-30-cad.md
+++ b/_posts/2020-11-30-cad.md
@@ -19,9 +19,13 @@ mathjax: true
 
 # X-FORCE
 
-X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、AutoCAD Mechanical  2020等程序。你想要免费使用Autodesk2020、2019等版本的软件，使用X-Force就能快速激活。X-Force需要配合Autodesk序列号和密钥才能成功激活Autodesk2020系列产品。下面来看看X-Force使用步骤。</p>
+X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、AutoCAD Mechanical  2020等程序。你想要免费使用Autodesk2020、2019等版本的软件，使用X-Force就能快速激活。X-Force需要配合Autodesk序列号和密钥才能成功激活Autodesk2020系列产品。下面来看看X-Force使用步骤。
 ![avatar](/image/xforce.jpg)
 
+**警告**
+某些防病毒/安全软件可能会对 X-Force Keygens 发出错误警告。可以使用 [VirusTotal](https://www.virustotal.com/) 进行完整、权威的扫描。
+
+请记住：防病毒软件并不总是对的，只是需要小心一点。
 
 ## Autodesk2008-2020激活图文教程
 
