--- a/_posts/2020-11-30-cad.md
+++ b/_posts/2020-11-30-cad.md
@@ -39,7 +39,7 @@ X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、Au
 
 **！！！ 如果已经安装了CAD，可以直接从第8步开始！！！**
 
-* 1、下载AutoCAD 2020安装压缩包，解压后获得64位cad2020安装包和注册机 
+* 1、下载AutoCAD 2020安装压缩包及本商铺提供的激活文件，解压后获得64位cad2020安装包和激活文件：注册机。
 
 * 2、双击原版安装包AutoCAD_2020_English_win_64bit_dlm.sfx.exe运行加载，并解压 
 
