--- a/_posts/2020-11-30-cad.md
+++ b/_posts/2020-11-30-cad.md
@@ -32,6 +32,42 @@ X-Force是欧特克软件通用注册机，支持3ds Max 2020、AutoCAD2020、Au
 
 请记住：防病毒软件并不总是对的，只是需要小心一点。
 
+## Autodesk2021-2022激活图文教程
+
+**！！！ 如果已经安装了CAD，可以直接从第8步开始！！！**
+
+* 1、下载AutoCAD 2020安装压缩包及本商铺提供的激活文件，解压后获得64位cad2020安装包和激活文件：注册机。
+
+* 2、双击原版安装包AutoCAD_2020_English_win_64bit_dlm.sfx.exe运行加载，并解压 
+
+![avatar](/image/cad1.jpg)
+
+* 3、点install安装 
+
+![avatar](/image/cad2.jpg)
+
+* 4、接受协议 
+
+![avatar](/image/cad3.jpg)
+
+* 5、继续点install安装 
+
+![avatar](/image/cad4.jpg)
+
+* 6、耐心等待安装 
+
+![avatar](/image/cad5.jpg)
+
+* 7、安装完成，我们断开网络，不要点运行
+
+![avatar](/image/cad6.jpg)
+
+* 8、将下载的激活文件解压出来，将acad.exe替换CAD安装目录下的acad.exe文件。替换之后即激活成功！（建议先备份安装目录下的acad文件）
+
+* 9、激活成功 
+
+![avatar](/image/cad13.jpg)
+
 ## Autodesk2008-2020激活图文教程
 
 
